--- a/GymApp/GymUI.csproj
+++ b/GymApp/GymUI.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="wwwroot\js\Pages\Routines\createRoutines.js" />
-    <None Include="wwwroot\js\Pages\Routines\searchSports.js" />
+    <None Include="wwwroot\js\Pages\Routines\routineHistory.js" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="jQuery" Version="3.7.1" />
