--- a/API/API.csproj
+++ b/API/API.csproj
@@ -15,6 +15,10 @@
   <ItemGroup>
     <None Remove="Controllers\Users\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Properties\launchSettings.json" />
+  </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\Users\" />
   </ItemGroup>
