Reset Password functionality
Added logic to send email to reset password

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -14,9 +14,11 @@
 
   <ItemGroup>
     <None Remove="Controllers\Users\" />
+    <None Remove="Controllers\MessageEmail\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\Users\" />
+    <Folder Include="Controllers\MessageEmail\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BL\BL.csproj">
