--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\DTO\DTO.csproj" />
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Sendinblue.Api" Version="0.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
+    <PackageReference Include="sib_api_v3_sdk" Version="4.0.2" />
+  </ItemGroup>
 </Project>
