Method to assign roles in the Admin page
Method to assign roles in the admin page has been created and implemented, tests have been performed and the result has always been the same, successful.

--- a/GymApp/GymUI.csproj
+++ b/GymApp/GymUI.csproj
@@ -20,10 +20,12 @@
     <Folder Include="Views\Admin\" />
     <Folder Include="Views\Member\" />
     <Folder Include="Views\Receptionist\" />
+    <Folder Include="wwwroot\js\Pages\Admin\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\js\Pages\" />
     <Content Remove="wwwroot\js\Pages\User\" />
+    <Content Remove="wwwroot\js\Pages\Admin\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="wwwroot\js\Pages\Routines\createRoutines.js" />
