--- a/GymApp/GymUI.csproj
+++ b/GymApp/GymUI.csproj
@@ -28,12 +28,16 @@
   <ItemGroup>
     <Content Remove="wwwroot\js\Pages\" />
     <Content Remove="wwwroot\js\Pages\Exercises\createExercises.js" />
+    <Content Remove="wwwroot\js\Pages\Routines\RecordResults.js" />
+    <Content Remove="wwwroot\js\Pages\Routines\routineList.js" />
     <Content Remove="wwwroot\js\Pages\User\" />
     <Content Remove="wwwroot\js\Pages\Admin\" />
     <Content Remove="wwwroot\js\Pages\Trainer\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="wwwroot\js\Pages\Exercises\createExercises.js" />
+    <None Include="wwwroot\js\Pages\Routines\RecordResults.js" />
+    <None Include="wwwroot\js\Pages\Routines\routineList.js" />
     <None Include="wwwroot\js\Pages\Routines\createRoutines.js" />
   </ItemGroup>
   <ItemGroup>
