Equipment was corrected
The equipment was fixed

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -28,5 +28,6 @@
     <ProjectReference Include="..\BL\BL.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
+    <ProjectReference Include="..\DTO\DTO.csproj" />
   </ItemGroup>
 </Project>
