--- a/GymApp/GymUI.csproj
+++ b/GymApp/GymUI.csproj
@@ -28,8 +28,8 @@
   <ItemGroup>
     <Content Remove="wwwroot\js\Pages\" />
     <Content Remove="wwwroot\js\Pages\Exercises\createExercises.js" />
+    <Content Remove="wwwroot\js\Pages\Routines\recordedResults.js" />
     <Content Remove="wwwroot\js\Pages\Routines\RecordResults.js" />
-    <Content Remove="wwwroot\js\Pages\Routines\Results.js" />
     <Content Remove="wwwroot\js\Pages\Routines\routineList.js" />
     <Content Remove="wwwroot\js\Pages\User\" />
     <Content Remove="wwwroot\js\Pages\Admin\" />
@@ -37,8 +37,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="wwwroot\js\Pages\Exercises\createExercises.js" />
-    <None Include="wwwroot\js\Pages\Routines\Results.js" />
-    <None Include="wwwroot\js\Pages\Routines\RecordResults.js" />
+    <None Include="wwwroot\js\Pages\Routines\recordedResults.js" />
+    <None Include="wwwroot\js\Pages\Routines\recordResults.js" />
     <None Include="wwwroot\js\Pages\Routines\routineList.js" />
     <None Include="wwwroot\js\Pages\Routines\createRoutines.js" />
   </ItemGroup>
