--- a/GymApp/GymUI.csproj
+++ b/GymApp/GymUI.csproj
@@ -29,7 +29,7 @@
     <Content Remove="wwwroot\js\Pages\" />
     <Content Remove="wwwroot\js\Pages\Exercises\createExercises.js" />
     <Content Remove="wwwroot\js\Pages\Routines\recordedResults.js" />
-    <Content Remove="wwwroot\js\Pages\Routines\RecordResults.js" />
+    <Content Remove="wwwroot\js\Pages\Routines\recordResult.js" />
     <Content Remove="wwwroot\js\Pages\Routines\routineList.js" />
     <Content Remove="wwwroot\js\Pages\User\" />
     <Content Remove="wwwroot\js\Pages\Admin\" />
@@ -38,7 +38,7 @@
   <ItemGroup>
     <None Include="wwwroot\js\Pages\Exercises\createExercises.js" />
     <None Include="wwwroot\js\Pages\Routines\recordedResults.js" />
-    <None Include="wwwroot\js\Pages\Routines\recordResults.js" />
+    <None Include="wwwroot\js\Pages\Routines\recordResult.js" />
     <None Include="wwwroot\js\Pages\Routines\routineList.js" />
     <None Include="wwwroot\js\Pages\Routines\createRoutines.js" />
   </ItemGroup>
