--- a/API/API.csproj
+++ b/API/API.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <None Remove="Controllers\Users\" />
     <None Remove="Controllers\Emails\" />
+    <None Remove="Controllers\Memberships\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,6 +25,7 @@
   <ItemGroup>
     <Folder Include="Controllers\Users\" />
     <Folder Include="Controllers\Emails\" />
+    <Folder Include="Controllers\Memberships\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BL\BL.csproj">
